Added project info

--- a/projects.json
+++ b/projects.json
@@ -146,5 +146,12 @@
         "author": "?",
         "year": "2017_SS",
         "status": 1
+    },
+    {
+        "title": "Five Kingdoms",
+        "folder": "29-06-17 Build Five Kingdoms",
+        "author": "Leonard Pratt",
+        "year": "2017_SS",
+        "status": 0 
     }
 ]
