--- a/projects.json
+++ b/projects.json
@@ -147,4 +147,17 @@
         "year": "2017_SS",
         "status": 1
     }
+    {
+
+        "title": "DodgeCar",
+
+        "folder": "DodgeCarWebGL",
+
+        "author": "dberghammer",
+
+        "year": "2017_SS",
+
+        "status": 1
+
+    }
 ]
