--- a/projects.json
+++ b/projects.json
@@ -95,7 +95,7 @@
         "folder": "2DGameBuild",
         "author": "hakobian",
         "year": "2016_WS",
-        "status": 1
+,        "status": 1
     },
     {
         "title": "I schias auf deppade Kreise",
