--- a/projects.json
+++ b/projects.json
@@ -146,5 +146,12 @@
         "author": "?",
         "year": "2017_SS",
         "status": 1
+    },
+     {
+        "title": "Meatshooter",
+        "folder": "meatshooterr",
+        "author": "?",
+        "year": "2017_SS",
+        "status": 0
     }
 ]
