--- a/projects.json
+++ b/projects.json
@@ -148,6 +148,21 @@
         "status": 1
     },
     {
+    "title": "Pink Box Defenders",
+    "folder": "PinkBoxDefenders_WebGL",
+    "author": "David Märzendorfer",
+    "year": "2017_SS",
+    "status": 0
+  },
+    
+  {  
+    "title": "Robo Rover",
+    "folder": "RoboRover",
+    "author": "Michael Duschek",
+    "year": "2017_SS",
+    "status": "0"
+  },
+   {
         "title": "Five Kingdoms",
         "folder": "29-06-17 Build Five Kingdoms",
         "author": "Leonard Pratt",
