--- a/projects.json
+++ b/projects.json
@@ -165,7 +165,7 @@
     
   {  
     "title": "Mario Kart",
-    "folder": "Mario Kart Build",
+    "folder": "mario kart build",
     "author": "Andreas Stuhlberger",
     "year": "2017_SS",
     "status": "0"
