--- a/projects.json
+++ b/projects.json
@@ -161,5 +161,12 @@
     "author": "Michael Duschek",
     "year": "2017_SS",
     "status": "0"
+  },
+    {  
+    "title": "Back to the Van",
+    "folder": "Back to the Van",
+    "author": "Manuel Schlagintweit",
+    "year": "2017_SS",
+    "status": "0"
   }
 ]
