--- a/projects.json
+++ b/projects.json
@@ -161,5 +161,12 @@
     "author": "Michael Duschek",
     "year": "2017_SS",
     "status": "0"
+  },
+    {  
+    "title": "HuntersWorld",
+    "folder": "HuntersWorldWebGL",
+    "author": "Lukas Hettmabb",
+    "year": "2017_SS",
+    "status": "0"
   }
 ]
