--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "github_url": "https://github.com/schloga99/HTLGrieskirchenShowcase2016-17/",
-    "github_io_url": "https://schloga99.github.io/HTLGrieskirchenShowcase2016-17/",
+    "github_url": "https://github.com/AlfredDoppler/HTLGrieskirchenShowcase2016-17/",
+    "github_io_url": "https://AlfredDoppler.github.io/HTLGrieskirchenShowcase2016-17/",
     "year": "2016/17"
 }
