--- a/projects.json
+++ b/projects.json
@@ -195,17 +195,10 @@
         "year": "2017_SS",
         "status": "1"
     },
-     {
-      "title": "Flappy Bird",
-      "folder": "FlappyGL",
-      "author": "Flavius Stoianov",
-      "year": "2017_SS",
-      "status": 0 
-  },
     {  
     "title": "HuntersWorld",
     "folder": "HuntersWorldWebGL",
-    "author": "Lukas Hettmabb",
+    "author": "Lukas Hettmann",
     "year": "2017_SS",
     "status": "0"
   }
