--- a/projects.json
+++ b/projects.json
@@ -195,6 +195,20 @@
         "year": "2017_SS",
         "status": "1"
     },
+     {
+      "title": "Flappy Bird",
+      "folder": "FlappyGL",
+      "author": "Flavius Stoianov",
+      "year": "2017_SS",
+      "status": 0
+  } ,
+     {
+      "title": "Arkanoid Game Erweiterung",
+      "folder": "2DGameBuild ",
+      "author": "Zareh Hakobian",
+      "year": "2017_SS",
+      "status": 1
+  } ,
     {  
     "title": "HuntersWorld",
     "folder": "HuntersWorldWebGL",
